Fix UI issue: unwanted vertical scrolling being introduced on mobile screens

--- a/main.sass
+++ b/main.sass
@@ -150,4 +150,4 @@ ul
 .mainPage // page styling for most pages in ShiningSword: display a basic layout with a header, some data items and links
     @extend .fadeIn
     @extend .hasMargins
-    max-height: calc(100vh - 6px)
+    max-height: calc(100svh - 6px)
